--- a/habit-tracker/src/Header.css
+++ b/habit-tracker/src/Header.css
@@ -2,19 +2,15 @@
     display: flex;
     flex-direction: row;
     justify-content: space-around;
+    align-items: baseline;
     margin-top: 30px;
-    padding: 30px;
+    padding: 10px;
     font-family:Arial, Helvetica, sans-serif;
     border-bottom: 1px solid rgba(0, 0, 0, 0.15);
     box-shadow: 0px 15px 10px -15px #111;    
 }
 
-#settings {
-    height: 22px;
-    width: 22px;
-}
-
-#filter {
-    height: 22px;
-    width: 22px;
+.header-images {
+    height: 20px;
+    width: 20px;
 }
