--- a/habit-tracker/src/Calendar.css
+++ b/habit-tracker/src/Calendar.css
@@ -1,4 +1,40 @@
 #calendar {
-    display: flex;
-    flex-direction: row;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  width: 100vw;
+}
+
+.day {
+  display: flex;
+  border: 1px solid black;
+  border-radius: 50%;
+  padding: 10px;
+  height: 25px;
+  width: 25px;
+  font-size: x-small;
+  font-weight: 600;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  margin-top: 25px;
+}
+
+.colored-day {
+  display: flex;
+  border: 2px solid rgb(239,71,111);
+  border-radius: 50%;
+  padding: 10px;
+  height: 25px;
+  width: 25px;
+  font-size: x-small;
+  font-weight: 600;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  margin-top: 25px;
 }
