--- a/habit-tracker/src/Footer.css
+++ b/habit-tracker/src/Footer.css
@@ -14,8 +14,7 @@
 
 .home-image {
     height: 30px;
-    width: 30px;
-    /* border-bottom: 2px solid rgb(239, 71, 111); */
+    width: 30px;    /* border-bottom: 2px solid rgb(239, 71, 111); */
 }
 
 .graph-image {
