--- a/habit-tracker/src/Habit.css
+++ b/habit-tracker/src/Habit.css
@@ -1,53 +1,102 @@
 /* times per day counter styling */
 #times-per-day {
-    display: flex;
-    flex-direction: row;
-    align-content: flex-start;
-    margin-left: 30px;
+  display: flex;
+  flex-direction: row;
+  align-content: flex-start;
+  margin-left: 30px;
 }
 
 .count-button {
-    background-color: rgb(255,255,255);
-    border: none;
-    font-size: medium;
-
+  background-color: rgb(255, 255, 255);
+  border: none;
+  font-size: medium;
 }
 
 .number {
-    background-color: rgb(223,223,223);
-    border-radius: 15px;
-    border: 5px solid rgb(223,223,223);
+  background-color: rgb(223, 223, 223);
+  border-radius: 15px;
+  border: 5px solid rgb(223, 223, 223);
 }
 
 /* goal period styling */
 .goal-period-button {
-    border: none;
-    padding: 7px;
-    border-radius: 15px;
+  border: none;
+  padding: 7px;
+  border-radius: 15px;
 }
 
 .goal-text {
-    display: flex;
-    align-content: flex-start;
-    margin-left: 30px;
+  display: flex;
+  align-content: flex-start;
+  margin-left: 30px;
 }
 #button-container {
-    display: flex;
-    align-content: flex-start;
-    margin-left: 30px;
+  display: flex;
+  align-content: flex-start;
+  margin-left: 30px;
 }
 
 /* time of day picker */
 #times-of-day {
+  display: flex;
+  flex-direction: row;
+  align-content: flex-start;
+  margin-left: 30px;
+  margin-bottom: 20;
+}
+
+.time-text {
+  display: flex;
+  align-content: flex-start;
+  margin-left: 30px;
+}
+
+/* .text {
     display: flex;
     flex-direction: row;
     align-content: flex-start;
     margin-left: 30px;
-    margin-bottom: 20;
+} */
+
+#dates {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: baseline;
+  margin-left: 30px;
+}
+.bold-text {
+  display: flex;
+  flex-direction: row;
+  align-content: flex-end;
+  margin-left: 30px;
+  font-weight: 700;
 }
 
-.time-text {
+/* next button styling */
+
+#next-button-container {
     display: flex;
-    align-content: flex-start;
-    margin-left: 30px;
+    flex-direction: row;
+    justify-content: space-around;
+    margin-top: 30px;
+    padding: 30px;
+    font-family:Arial, Helvetica, sans-serif;
+    align-items: flex-end;
+    position:absolute;
+    left:0;
+    bottom:0;
+    right:0;
+}
+
+#next-button {
+    background-color: black;
+    color: white;
+    border: none;
+    padding: 20px;
+    width: 60vw;
+    font-size: large;
+    font-weight: 700;
+    border-radius: 15px;
+
 }
