--- a/habit-tracker/src/Habit.css
+++ b/habit-tracker/src/Habit.css
@@ -73,6 +73,25 @@
   font-weight: 700;
 }
 
+/* text input */
+#form {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+#input-box {
+    padding: 30px;
+    margin-top: 10px;
+    border-radius: 15px;
+    color: black;
+    width: 70vw;
+}
+
+.form-text {
+    /* display: flex; */
+    align-content: flex-start;
+}
 /* next button styling */
 
 #next-button-container {
