--- a/habit-tracker/src/AddHabit.css
+++ b/habit-tracker/src/AddHabit.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: row;
     /* justify-content: space-around; */
-    align-content: flex-start;
+    /* align-content: flex-start; */
     /* align-items: baseline;  */
     margin-top: 30px;
     padding: 5px;
@@ -15,3 +15,7 @@
     font-weight: 700;
 }
 
+#back-button {
+    display: flex;
+    align-content: flex-start;
+}
