--- a/habit-tracker/src/Habit.css
+++ b/habit-tracker/src/Habit.css
@@ -92,6 +92,15 @@
     justify-content: center;
     margin: 10px;
     padding: 10px;
+    margin-left: auto;
+    margin-right: auto;
+
+}
+
+#input-section {
+    display: flex;
+    justify-content: center;
+    align-content: center;
 }
 
 #input-box {
