--- a/habit-tracker/src/HabitHeader.css
+++ b/habit-tracker/src/HabitHeader.css
@@ -1,7 +1,4 @@
 #header {
-  /* display: flex;
-  flex-direction: row; */
-  /* justify-content: flex-start; */
   margin-top: 30px;
   padding: 5px;
   font-family: Arial, Helvetica, sans-serif;
@@ -20,4 +17,12 @@
   display: flex;
   flex-direction: row;
   align-content: flex-start;
+}
+
+#content-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: baseline;
+    align-self: flex-start;
 }
