--- a/habit-tracker/src/Home.css
+++ b/habit-tracker/src/Home.css
@@ -28,6 +28,12 @@
     background-color: rgb(221,221,221);
     width: 90vw;
     border-radius: 15px;
+    max-width: 400px;
+}
+
+#do-task-text {
+    font-weight: 700;
+    font-size:x-large;
 }
 
 #home-text-tasks {
@@ -36,4 +42,9 @@
     justify-content: center;
     align-items: center;
     height: 30vh;
+}
+
+#plus-sign {
+    font-weight: 700;
+    font-size: xx-large;
 }
